HTML onclick del botón (button)
Agrega el código necesario en el atributo HTML onclick del botón (button) para que lance una alerta con el texto "Hola!", verifica que la alerta funciona y haz nuevamente commit y push.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button>Saludar</button>
+    <button onclick="window.alert('Hola!')">Saludar</button>
   </body>
+
 </html>
