"Hola! Soy el div".

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <button onclick="window.alert('Hola!')">Saludar</button>
+    <div id="zanahoriasVerdes" style="padding: 5px; background-color: green;">
+    <button onclick="saludar()">Saludar</button>
+  </div>
   </body>
-
+<script src="eventos.js"></script>
 </html>
