--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div id="zanahoriasVerdes" style="padding: 5px; background-color: green;">
-    <button onclick="saludar()">Saludar</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+<body>
+  <div id="zanahoriasVerdes" style="padding: 5px; background-color: green;">
+    <button id="btnSaludar">Saludar</button>
   </div>
-  </body>
-<script src="eventos.js"></script>
+  <script src="eventos.js"></script>
+</body>
 </html>
